# lambda_ethereum_rust

./: ..tool-versions.un~  .dockerignore  .gitignore  .gitmodules  .tool-versions  .tool-versions~  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose-dev.yaml  flamegraph.sh  justfile  loc_report.json  loc_report.txt  publish.sh  results.md
cmd/ef_tests/: Cargo.toml  ef_tests.rs  network.rs  serde_utils.rs  test_runner.rs  types.rs
cmd/ef_tests/ethereum_rust/: Cargo.toml  types.rs
cmd/ef_tests/ethrex/: Cargo.toml  ef_tests.rs  network.rs  test_runner.rs  types.rs
cmd/ef_tests/levm/: Cargo.toml  Makefile  deserialize.rs  ef_tests.rs  mod.rs  parser.rs  report.rs  runner.rs  types.rs  utils.rs
cmd/ef_tests/tests/: cancun.rs  shanghai.rs
cmd/ethereum_rust/: Cargo.toml  cli.rs  decode.rs  ethereum_rust.rs
cmd/ethereum_rust/src/: main.rs
cmd/ethereum_rust_l2/: Cargo.toml  README.md
cmd/ethereum_rust_l2/src/: cli.rs  config.rs  lib.rs  main.rs
cmd/ethrex/: Cargo.toml  cli.rs  decode.rs  ethrex.rs
crates/blockchain/: Cargo.toml  README.md  blockchain.rs  constants.rs  error.rs  fork_choice.rs  mempool.rs  payload.rs  smoke_test.rs
crates/blockchain/dev/: Cargo.toml  Dockerfile  block_producer.rs  dev.rs  docker-compose-dev.yaml
crates/blockchain/metrics/: Cargo.toml  README.md  api.rs  docker-compose-metrics-l1-dev.overrides.yaml  docker-compose-metrics-l2.overrides.yaml  docker-compose-metrics.yaml  metrics.rs  metrics_api.rs  metrics_l2.rs  metrics_transactions.rs  mod.rs
crates/chain/: Cargo.toml  chain.rs  constants.rs  error.rs  mempool.rs
crates/common/: Cargo.toml  README.md  serde_utils.rs
crates/common/rlp/: Cargo.toml  decode.rs  encode.rs  error.rs  structs.rs
crates/common/types/: account.rs  blobs_bundle.rs  block.rs  constants.rs  fork_id.rs  genesis.rs  mod.rs  receipt.rs  transaction.rs
crates/core/: Cargo.toml  core.rs  serde_utils.rs
crates/core/evm/: errors.rs  execution_result.rs  mod.rs
crates/core/rlp/: decode.rs  encode.rs
crates/core/src/: account.rs  genesis.rs  lib.rs  rlp.rs  serde_utils.rs
crates/core/types/: account.rs  blobs_bundle.rs  block.rs  constants.rs  filters.rs  fork_id.rs  genesis.rs  mod.rs  payload.rs  receipt.rs  transaction.rs
crates/evm/: Cargo.toml  database.rs  db.rs  errors.rs  evm.rs  execution_result.rs  lib.rs
crates/evm/src/: lib.rs
crates/l2/: .env.example  .env.sepolia  .example.env  .example.envrc  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose-l2.yaml  docker-compose-l2.yml  l2.rs  prover.rs
crates/l2/contracts/: .gitignore  Cargo.toml  Dockerfile  deployer.rs  errors.rs  foundry.toml
crates/l2/docs/: README.md  contracts.md  operator.md  overview.md  program.md  proposer.md  prover.md  sequencer.md  state_diffs.md  withdrawals.md
crates/l2/operator/: block_producer.rs  consensus_mock.rs  engine.rs  errors.rs  l1_tx_sender.rs  l1_watcher.rs  mod.rs  proof_data_provider.rs  prover_server.rs  xxx.rs
crates/l2/proposer/: errors.rs  l1_commiter.rs  l1_committer.rs  l1_watcher.rs  metrics.rs  mod.rs  prover_server.rs  state_diff.rs
crates/l2/prover/: .gitignore  Cargo.toml  Makefile  build.rs  mod.rs  proof_data_client.rs  prover.rs  prover_client.rs  sp1_prover.rs  zk_prover.rs
crates/l2/rpc/: l1_rpc.rs  mod.rs
crates/l2/sdk/: Cargo.toml
crates/l2/sequencer/: errors.rs  l1_watcher.rs  mod.rs
crates/l2/tests/: tests.rs
crates/l2/utils/: error.rs  merkle_tree.rs  mod.rs  save_prover_state.rs  test_data_io.rs  test_files_read.rs
crates/net/: Cargo.toml  README.md  discv4.rs  kademlia.rs  net.rs  rlpx.rs  types.rs
crates/net/rlpx/: connection.rs  eth.rs  frame.rs  handshake.rs  message.rs  p2p.rs
crates/net/src/: discv4.rs  kademlia.rs  lib.rs  rlpx.rs  types.rs
crates/networking/p2p/: Cargo.toml  README.md  bootnode.rs  discv4.rs  kademlia.rs  net.rs  peer_channels.rs  rlpx.rs  snap.rs  sync.rs  types.rs
crates/networking/rpc/: Cargo.toml  README.md  authentication.rs  rpc.rs  utils.rs
crates/pool/: Cargo.toml  error.rs  mempool.rs
crates/rpc/: Cargo.toml  authentication.rs  rpc.rs  utils.rs
crates/rpc/admin/: mod.rs
crates/rpc/debug_rpc/: mod.rs
crates/rpc/engine/: exchange_transition_config.rs  fork_choice.rs  mod.rs  payload.rs
crates/rpc/eth/: account.rs  block.rs  client.rs  fee_market.rs  filter.rs  logs.rs  mod.rs  transaction.rs
crates/rpc/src/: lib.rs  utils.rs
crates/rpc/types/: account_proof.rs  block.rs  block_identifier.rs  fork_choice.rs  mod.rs  payload.rs  receipt.rs  transaction.rs
crates/storage/: Cargo.toml  README.md  engines.rs  error.rs  in_memory.rs  libmdbx.rs  rlp.rs  rocksdb.rs  sled.rs  state_provider.rs  storage.rs  storage_trie.rs  trie.rs  trie_db.rs  world_state.rs  world_state_trie.rs
crates/storage/cache/: Cargo.toml  cache.rs  error.rs
crates/storage/core/: account.rs  block.rs  fork_id.rs  genesis.rs  transaction.rs
crates/storage/engines/: api.rs  in_memory.rs  libmdbx.rs
crates/storage/src/: account.rs  block.rs  error.rs  in_memory.rs  lib.rs  libmdbx.rs  receipt.rs  rlp.rs  rocksdb.rs  sled.rs  world_state.rs
crates/storage/storage/: Cargo.toml  rlp.rs  storage.rs
crates/storage/store/: Cargo.toml  engines.rs  error.rs  rlp.rs  storage.rs
crates/storage/trie/: Cargo.toml  db.rs  dumb_hash.rs  dumb_nibbles.rs  encoding.rs  error.rs  hashing.rs  libdbmx_db.rs  mod.rs  nibble.rs  nibbles.rs  node.rs  node_hash.rs  node_ref.rs  proof.rs  rlp.rs  state.rs  test_utils.rs  trie.rs  trie_iter.rs  verify_range.rs
crates/storage/trie_db/: encoding.rs  node.rs  nodes_db.rs  rlp.rs  trie.rs
crates/vm/: Cargo.toml  README.md  db.rs  errors.rs  execution_db.rs  execution_result.rs  levm.rs  mods.rs  vm.rs
crates/vm/evm/: Cargo.toml  db.rs  evm.rs  execution_result.rs
ef_tests/: Cargo.toml
ef_tests/src/: evm.rs  lib.rs  serde_utils.rs  types.rs
ef_tests/tests/: cancun.rs  tests.rs
ef_tests/vectors/: add11.json  solidityExample.json
ethereum_rust/: Cargo.toml
ethereum_rust/src/: cli.rs  main.rs
ethrex/: Cargo.toml
ethrex/src/: cli.rs  main.rs
(+713 files in other folders)
