[workspace]
members = [
    "crates/blockchain",
    "crates/common",
    "crates/networking/p2p",
    "crates/networking/rpc",
    "crates/storage/store",
    "crates/vm/evm",
    "crates/storage/trie",
    "crates/common/rlp",
    "cmd/ethereum_rust",
    "cmd/ef_tests",
    "crates/vm/levm",
    "crates/vm/levm/bench/revm_comparison",
    "cmd/ethereum_rust_l2",
]
resolver = "2"
default-members = ["cmd/ethereum_rust", "cmd/ethereum_rust_l2"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ethereum_rust-blockchain = { path = "./crates/blockchain" }
ethereum_rust-core = { path = "./crates/common" }
ethereum_rust-net = { path = "./crates/networking/p2p" }
ethereum_rust-rpc = { path = "./crates/networking/rpc" }
ethereum_rust-storage = { path = "./crates/storage/store" }
ethereum_rust-evm = { path = "./crates/vm/evm" }
ethereum_rust-trie = { path = "./crates/storage/trie" }
ethereum_rust-rlp = { path = "./crates/common/rlp" }
ethereum_rust-l2 =  { path = "./crates/l2" }
ethereum_rust-levm =  { path = "./crates/levm" }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3.0"

ethereum-types = { version = "0.14.1", features = ["serialize"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
libmdbx = { version = "0.5.0", features = ["orm"] }
bytes = { version = "1.6.0", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0.61"
hex = "0.4.3"
hex-literal = "0.4.1"
crc32fast = "1.4.2"
lazy_static = "1.5.0"
sha3 = "0.10.8"
tokio-util = { version = "0.7.12", features = ["rt"] }
rand = "0.8.5"
