[workspace]
members = [
  "crates/blockchain",
  "crates/common",
  "crates/networking/p2p",
  "crates/networking/rpc",
  "crates/storage/store",
  "crates/vm",
  "crates/storage/trie",
  "crates/common/rlp",
  "cmd/ethereum_rust",
  "cmd/ef_tests",
  "crates/vm/levm",
  "crates/vm/levm/bench/revm_comparison",
  "cmd/ethereum_rust_l2",
]
resolver = "2"
default-members = ["cmd/ethereum_rust", "cmd/ethereum_rust_l2"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# TODO change this
# Conflicts with types, because of the patch
# We need the patches/patch_001_mdbx branch, check how to reference the repo directly (merge the branch?).
# Using this branch to have De/Serialization for some types, some functions were made public. 
#ethereum_rust-blockchain = { path = "./crates/blockchain" }
#ethereum_rust-core = { path = "./crates/core" }
#ethereum_rust-net = { path = "./crates/net" }
#ethereum_rust-rpc = { path = "./crates/rpc" }
#ethereum_rust-storage = { path = "./crates/storage" }
#ethereum_rust-evm = { path = "./crates/evm" }
#ethereum_rust-trie = { path = "./crates/trie" }
#ethereum_rust-rlp = { path = "./crates/rlp" }
ethereum_rust-l2 = { path = "./crates/l2" }

ethereum_rust-storage = { git = "https://github.com/lambdaclass/ethereum_rust", package = "ethereum_rust-storage", branch = "patches/patch_001_mdbx" }
ethereum_rust-rpc = { git = "https://github.com/lambdaclass/ethereum_rust", package = "ethereum_rust-rpc", branch = "patches/patch_001_mdbx" }
ethereum_rust-core = { git = "https://github.com/lambdaclass/ethereum_rust", package = "ethereum_rust-core", branch = "patches/patch_001_mdbx" }
ethereum_rust-rlp = { git = "https://github.com/lambdaclass/ethereum_rust", package = "ethereum_rust-rlp", branch = "patches/patch_001_mdbx" }
ethereum_rust-vm = { git = "https://github.com/lambdaclass/ethereum_rust", package = "ethereum_rust-vm", branch = "patches/patch_001_mdbx" }
ethereum_rust-blockchain = { git = "https://github.com/lambdaclass/ethereum_rust", package = "ethereum_rust-blockchain", branch = "patches/patch_001_mdbx" }
ethereum_rust-net = { git = "https://github.com/lambdaclass/ethereum_rust", package = "ethereum_rust-net", branch = "patches/patch_001_mdbx" }
ethereum_rust-trie = { git = "https://github.com/lambdaclass/ethereum_rust", package = "ethereum_rust-trie", branch = "patches/patch_001_mdbx" }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3.0"


ethereum-types = { version = "0.14.1", features = ["serialize"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
libmdbx = { version = "0.5.0", features = ["orm"] }
bytes = { version = "1.6.0", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0.61"
hex = "0.4.3"
hex-literal = "0.4.1"
crc32fast = "1.4.2"
lazy_static = "1.5.0"
sha3 = "0.10.8"
tokio-util = { version = "0.7.12", features = ["rt"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
cfg-if = "1.0.0"
