[package]
name = "ef_tests"
version.workspace = true
edition.workspace = true

[dependencies]
ethereum_rust-core.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
hex = "0.4.3"

[dev-dependencies]
datatest-stable = "0.2.9"

[[test]]
name = "cancun"
harness = false
