[package]
name = "ef_tests"
version.workspace = true
edition.workspace = true

[dependencies]
ethereum_rust-core.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
hex.workspace = true
keccak-hash = "0.10.0"

[dev-dependencies]
datatest-stable = "0.2.9"

[[test]]
name = "cancun"
harness = false
