[package]
name = "ethereum_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
rpc.workspace = true
clap = { version = "4.5.4", features = ["cargo"] }
