[package]
name = "ethrex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rpc.workspace = true
ethrex-core.workspace = true
ethrex-net.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5.4", features = ["cargo"] }
serde_json.workspace = true
tokio = { version = "1.38.0", features = ["full"] }
