[package]
name = "ethereum_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_rust-blockchain.workspace = true
ethereum_rust-rpc.workspace = true
ethereum_rust-core.workspace = true
ethereum_rust-net.workspace = true
ethereum_rust-storage.workspace = true
ethereum_rust-evm.workspace = true
ethereum_rust-rlp.workspace = true
ethereum_rust-l2.workspace = true

bytes.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5.4", features = ["cargo"] }
serde_json.workspace = true
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
rand = "0.8.5"
k256 = { version = "0.13.3", features = ["ecdh"] }
tokio-util.workspace = true

cfg-if = "1.0.0"

[[bin]]
name = "ethereum_rust"
path = "./ethereum_rust.rs"

[features]
default = []
l2 = []
