[package]
name = "ethereum_rust_l2_cli"
version.workspace = true
edition.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
bytes.workspace = true
ethereum-types.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
hex.workspace = true
log = "0.4"
clap = { version = "4.3", features = ["derive"] }
clap_complete = "4.5.17"
eyre = "0.6"
dirs = "5.0.1"
toml = "0.8.19"
dialoguer = "0.11"
colored = "2.1.0"
spinoff = "0.8.0"
itertools = "0.13.0"
strum = "0.26.3"
libsecp256k1 = "0.7.1"

ethereum_rust-l2.workspace = true
ethereum_rust-core.workspace = true

[[bin]]
name = "ethereum_rust_l2"
path = "./src/main.rs"
