[package]
name = "ethrex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-blockchain.workspace = true
ethrex-rpc.workspace = true
ethrex-core.workspace = true
ethrex-net.workspace = true
ethrex-storage = { workspace = true, optional = true }
ethrex-vm.workspace = true
ethrex-rlp.workspace = true
ethrex-l2.workspace = true

bytes.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
k256.workspace = true
clap = { version = "4.5.4", features = ["cargo"] }
directories = "5.0.1"
serde_json.workspace = true
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
rand = "0.8.5"
local-ip-address = "0.6"
tokio-util.workspace = true
libmdbx = { workspace = true, optional = true }
redb = { workspace = true, optional = true }

cfg-if = "1.0.0"

ethrex-dev = { path = "../../crates/blockchain/dev", optional = true }

[[bin]]
name = "ethrex"
path = "./ethrex.rs"

[features]
default = ["dep:ethrex-storage", "libmdbx"]
dev = ["dep:ethrex-dev"]
libmdbx = ["dep:libmdbx", "ethrex-storage/libmdbx"]
redb = ["dep:redb", "ethrex-storage/redb"]
l2 = ["ethrex-vm/l2"]
levm = ["ethrex-vm/levm", "ethrex-blockchain/levm"]

[profile.release]
lto = "fat"
codegen-units = 1
