[package]
name = "ethereum_rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
sha3.workspace = true
tracing.workspace = true
bytes.workspace = true
c-kzg.workspace = true
cfg-if = "1.0.0"

ethereum_rust-rlp.workspace = true
ethereum_rust-core = { path = "../common", default-features = false }
ethereum_rust-storage = { path = "../storage/store", default-features = false }
ethereum_rust-vm = { path = "../vm", default-features = false }

k256 = { version = "0.13.3", features = ["ecdh"] }

[dev-dependencies]
serde_json.workspace = true
hex = "0.4.3"

[lib]
path = "./blockchain.rs"

[features]
default = ["libmdbx"]
libmdbx = [
    "ethereum_rust-core/libmdbx",
    "ethereum_rust-storage/default",
    "ethereum_rust-vm/libmdbx",
]
levm = ["ethereum_rust-vm/levm"]
