[package]
name = "ethrex-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rlp.workspace = true
ethrex-trie = { path = "../storage/trie", default-features = false }

tinyvec = "1.6.0"
ethereum-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
k256.workspace = true
# TODO(#1102): Move to Lambdaworks in the future
c-kzg = "^1.0.3"
keccak-hash = "0.10.0"
sha3.workspace = true
secp256k1.workspace = true
once_cell = "1.20.2"
crc32fast.workspace = true
bytes.workspace = true
hex.workspace = true
lazy_static.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[features]
default = ["libmdbx"]
libmdbx = ["ethrex-trie/libmdbx"]

[lib]
path = "./core.rs"
