[package]
name = "ethereum_rust-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = "1.6.0"
ethereum-types = "0.14.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
keccak-hash = "0.10.0"
sha3.workspace = true
secp256k1 = { version = "0.29", default-features = false, features = [
    "global-context",
    "recovery",
] }
revm = { version = "10.0.0", features = ["serde", "std", "serde-json"] }
patricia-merkle-tree.workspace = true
bytes.workspace = true
hex.workspace = true
lazy_static.workspace = true

[dev-dependencies]
hex-literal = "0.4.1"
