[package]
name = "ethereum_rust-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_rust-rlp.workspace = true
ethereum_rust-trie.workspace = true
tinyvec = "1.6.0"
ethereum-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
keccak-hash = "0.10.0"
sha3.workspace = true
secp256k1 = { version = "0.29", default-features = false, features = [
    "global-context",
    "recovery",
] }
crc32fast.workspace = true
bytes.workspace = true
hex.workspace = true
lazy_static.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[lib]
path = "./core.rs"
