[package]
name = "ethereum_rust-evm"
version.workspace = true
edition.workspace = true

[dependencies]
ethereum_rust-core.workspace = true
ethereum_rust-storage.workspace = true
revm = { version = "10.0.0", features = ["serde", "std", "serde-json", "optional_no_base_fee", "optional_block_gas_limit"] }
revm-inspectors = { version = "0.5.3" }
revm-primitives = { version = "7.1.0" }
bytes.workspace = true
thiserror.workspace = true

[lib]
path = "./evm.rs"
