[package]
name = "ethereum_rust-evm"
version.workspace = true
edition.workspace = true

[dependencies]
revm-primitives = { version = "10.0.0", features = [
    "std",
], default-features = false }
revm = { version = "14.0.3", features = [
    "std",
    "serde",
    "serde-json",
    "optional_no_base_fee",
    "optional_block_gas_limit",
], default-features = false }
ethereum_rust-core.workspace = true
ethereum_rust-storage = { workspace = true, default-features = false }
# These dependencies must be kept up to date with the corresponding revm version, otherwise errors may pop up because of trait implementation mismatches
revm-inspectors = { version = "0.8.1" }
bytes.workspace = true
thiserror.workspace = true
hex.workspace = true
lazy_static.workspace = true

[features]
default = ["in_memory"]
in_memory = ["ethereum_rust-storage/in_memory"]
libmdbx = ["ethereum_rust-storage/libmdbx"]

[lib]
path = "./evm.rs"
