[package]
name = "ethereum_rust-l2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ethereum-types.workspace = true
ethereum_rust-core.workspace = true
ethereum_rust-rlp.workspace = true
ethereum_rust-rpc.workspace = true
ethereum_rust-blockchain.workspace = true
ethereum_rust-storage.workspace = true
ethereum_rust-vm.workspace = true
ethereum_rust-dev = { path = "../../crates/blockchain/dev" }
hex.workspace = true
bytes.workspace = true
jsonwebtoken.workspace = true
secp256k1 = { version = "0.29", default-features = false, features = [
    "global-context",
    "recovery",
] }
keccak-hash = "0.10.0"
envy = "0.4.2"
thiserror.workspace = true
sha2 = "0.10.8"
c-kzg = "^1.0.3"

# risc0
risc0-zkvm = { version = "1.1.2" }


[lib]
path = "./l2.rs"
