[package]
name = "ethereum_rust-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_rust-core.workspace = true

tracing.workspace = true
tokio.workspace = true
bytes.workspace = true

k256 = { version = "0.13.3", features = ["ecdh"] }
keccak-hash = "0.10.0"

# RLPx
concat-kdf = "0.1.0"
hmac = "0.12.1"
aes = "0.8.4"
ctr = "0.9.2"
rand = "0.8.5"

[dev-dependencies]
hex-literal = "0.4.1"
