[package]
name = "ethereum_rust-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_rust-core.workspace = true
ethereum_rust-storage.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[lib]
path = "./mempool.rs"
