[package]
name = "ethereum_rust-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ethereum_rust-core.workspace = true
ethereum_rust-storage.workspace = true
ethereum_rust-evm.workspace = true
ethereum_rust-blockchain.workspace = true
ethereum_rust-net.workspace = true
ethereum_rust-rlp.workspace = true
hex.workspace = true
axum-extra = {version = "0.9.3", features = ["typed-header"]}
jsonwebtoken = "9.3.0"

[dev-dependencies]
hex-literal = "0.4.1"

[lib]
path = "./rpc.rs"
