[package]
name = "ethereum_rust-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ethereum_rust-core.workspace = true
# ethereum_rust-trie = { workspace = true, default-features = false }
ethereum_rust-rlp.workspace = true

ethereum-types = "0.14.1"
anyhow = "1.0.86"
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
sha3.workspace = true
hex.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
libmdbx = { workspace = true, optional = true }

# FIXME: It is necessary not to re-use the workspace definitions.
ethereum_rust-core = { path = "../core", default-features = false }
ethereum_rust-trie = { path = "../trie", default-features = false }

[features]
default = ["libmdbx"]
no_libmdbx = ["ethereum_rust-trie/no_libmdbx", "ethereum_rust-core/no_libmdbx"]
libmdbx = ["dep:libmdbx", "ethereum_rust-trie/libmdbx", "ethereum_rust-core/libmdbx"]

[dev-dependencies]
hex.workspace = true
hex-literal.workspace = true

[lib]
path = "./storage.rs"
