[package]
name = "ethrex-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
ethrex-core = { path = "../common", default-features = false }
ethrex-storage = { path = "../storage/store", default-features = false }
ethrex-levm = { path = "./levm", optional = true }
ethrex-trie = { path = "../storage/trie", default-features = false }
ethrex-rlp = { path = "../common/rlp", default-features = false }
revm = { version = "14.0.3", features = [
  "serde",
  "std",
  "serde-json",
  "optional_no_base_fee",
  "optional_block_gas_limit",
  "optional_balance_check",
], default-features = false }

# These dependencies must be kept up to date with the corresponding revm version, otherwise errors may pop up because of trait implementation mismatches
revm-inspectors = { version = "0.8.1" }
revm-primitives = { version = "10.0.0", features = [
  "std",
], default-features = false }
bytes.workspace = true
thiserror.workspace = true
hex.workspace = true
lazy_static.workspace = true
cfg-if.workspace = true
tracing.workspace = true

serde.workspace = true
bincode = "1"

ethereum-types = "0.14.1"

[lib]
path = "./vm.rs"

[features]
default = ["c-kzg", "blst"]
l2 = []
c-kzg = ["revm/c-kzg"]
blst = ["revm/blst"]
libmdbx = ["ethrex-storage/default", "ethrex-core/libmdbx"]
levm = ["ethrex-levm"]

[profile.test]
opt-level = 3
