[package]
name = "ef_tests-ethereum_rust"
version.workspace = true
edition.workspace = true

[dependencies]
ethereum_rust-blockchain.workspace = true
ethereum_rust-core.workspace = true
ethereum_rust-storage.workspace = true
ethereum_rust-rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
hex.workspace = true
lazy_static.workspace = true

[dev-dependencies]
datatest-stable = "0.2.9"

[lib]
path = "./ef_tests.rs"

[[test]]
name = "cancun"
harness = false

[[test]]
name = "shanghai"
harness = false
