[package]
name = "ef_tests-ethrex"
version.workspace = true
edition.workspace = true

[dependencies]
ethrex-blockchain.workspace = true
ethrex-core.workspace = true
ethrex-storage.workspace = true
ethrex-rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
hex.workspace = true
lazy_static.workspace = true

[dev-dependencies]
datatest-stable = "0.2.9"

[lib]
path = "./ef_tests.rs"

[[test]]
name = "cancun"
harness = false

[[test]]
name = "shanghai"
harness = false
