[package]
name = "ef_tests-levm"
version.workspace = true
edition.workspace = true

[dependencies]
ethereum_rust-blockchain = { workspace = true, features = ["levm"] }
ethereum_rust-core.workspace = true
ethereum_rust-storage.workspace = true
ethereum_rust-rlp.workspace = true
ethereum_rust-vm = { workspace = true, features = ["levm"] }
ethereum_rust-levm = { path = "../../../crates/vm/levm" }
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
hex.workspace = true
keccak-hash = "0.11.0"
colored = "2.1.0"
spinoff = "0.8.0"
thiserror = "2.0.3"
clap = { version = "4.3", features = ["derive"] }
clap_complete = "4.5.17"

revm = { version = "14.0.3", features = [
    "serde",
    "std",
    "serde-json",
    "optional_no_base_fee",
    "optional_block_gas_limit",
], default-features = false }

[dev-dependencies]
hex = "0.4.3"

[lib]
path = "./ef_tests.rs"

[[test]]
name = "ef_tests_levm"
harness = false
