[package]
name = "ethereum_rust-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_rust-rpc.workspace = true

tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
serde_json.workspace = true
serde.workspace = true
bytes.workspace = true
ethereum-types.workspace = true
hex.workspace = true
reqwest = { version = "0.12.7", features = ["json"] }
envy = "0.4.2"
keccak-hash = "0.10.0"

[lib]
path = "./dev.rs"
