[package]
name = "ethereum_rust-rlp"
version.workspace = true
edition.workspace = true

[dependencies]
tinyvec = "1.6.0"
thiserror.workspace = true
bytes.workspace = true
hex.workspace = true
lazy_static.workspace = true
ethereum-types.workspace = true

[dev-dependencies]
hex-literal.workspace = true
[lib]
path = "./rlp.rs"
