[package]
name = "ethrex_l2-deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
ethereum-types = { version = "0.14.1", features = ["serialize"] }
bytes = { version = "1.6.0", features = ["serde"] }
secp256k1.workspace = true
keccak-hash = "0.10.0"
hex = "0.4.3"
spinoff = "0.8.0"
colored = "2.1.0"
lazy_static = "1.5.0"
tracing.workspace = true

ethrex-l2 = { path = "../../l2" }
ethrex-core = { path = "../../common" }

[[bin]]
name = "ethrex_l2_l1_deployer"
path = "./deployer.rs"
